src/grammar/cirql/cirql_parser.go
// Code generated from cirql.g4 by ANTLR 4.13.2. DO NOT EDIT.

package cirqlgrammar // cirql
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type cirqlParser struct {
	*antlr.BaseParser
}

var CirqlParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func cirqlParserInit() {
	staticData := &CirqlParserStaticData
	staticData.LiteralNames = []string{
		"", "'query'", "'http'", "'file'", "'stdin'", "'map'", "'flatMap'",
		"'filter'", "'reduce'", "'sort'", "'limit'", "'uniq'", "'count'", "'sum'",
		"'min'", "'max'", "'avg'", "'first'", "'last'", "'group_by'", "'collect'",
		"'asc'", "'desc'", "'true'", "'false'", "'null'", "'|'", "'.'", "','",
		"':'", "'$'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'||'", "'&&'",
		"'!'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'+'", "'-'", "'*'",
		"'/'", "'%'",
	}
	staticData.SymbolicNames = []string{
		"", "QUERY", "HTTP", "FILE", "STDIN", "MAP", "FLATMAP", "FILTER", "REDUCE",
		"SORT", "LIMIT", "UNIQ", "COUNT", "SUM", "MIN", "MAX", "AVG", "FIRST",
		"LAST", "GROUP_BY", "COLLECT", "ASC", "DESC", "TRUE", "FALSE", "NULL",
		"PIPE", "DOT", "COMMA", "COLON", "DOLLAR", "LPAREN", "RPAREN", "LBRACE",
		"RBRACE", "LBRACK", "RBRACK", "OR", "AND", "NOT", "EQ", "NE", "GE",
		"LE", "GT", "LT", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "NAME",
		"FLOAT", "INT", "STRING", "WS",
	}
	staticData.RuleNames = []string{
		"pipeline", "stage", "sourceStage", "queryStage", "queryBody", "selectionSet",
		"field", "arguments", "argument", "httpStage", "fileStage", "stdinStage",
		"transformStage", "mapStage", "flatMapStage", "mapping", "filterStage",
		"reduceStage", "reduceOp", "sortStage", "limitStage", "uniqStage", "expr",
		"fieldAccess", "pathSeg", "funcCall", "variable", "argValue", "objectLit",
		"listLit", "literal",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// cirqlParserInit initializes any static state used to implement cirqlParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewcirqlParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func CirqlParserInit() {
	staticData := &CirqlParserStaticData
	staticData.once.Do(cirqlParserInit)
}

// NewcirqlParser produces a new parser instance for the optional input antlr.TokenStream.
func NewcirqlParser(input antlr.TokenStream) *cirqlParser {
	CirqlParserInit()
	this := new(cirqlParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &CirqlParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "cirql.g4"

	return this
}

// cirqlParser tokens.
const (
	cirqlParserEOF      = antlr.TokenEOF
	cirqlParserQUERY    = 1
	cirqlParserHTTP     = 2
	cirqlParserFILE     = 3
	cirqlParserSTDIN    = 4
	cirqlParserMAP      = 5
	cirqlParserFLATMAP  = 6
	cirqlParserFILTER   = 7
	cirqlParserREDUCE   = 8
	cirqlParserSORT     = 9
	cirqlParserLIMIT    = 10
	cirqlParserUNIQ     = 11
	cirqlParserCOUNT    = 12
	cirqlParserSUM      = 13
	cirqlParserMIN      = 14
	cirqlParserMAX      = 15
	cirqlParserAVG      = 16
	cirqlParserFIRST    = 17
	cirqlParserLAST     = 18
	cirqlParserGROUP_BY = 19
	cirqlParserCOLLECT  = 20
	cirqlParserASC      = 21
	cirqlParserDESC     = 22
	cirqlParserTRUE     = 23
	cirqlParserFALSE    = 24
	cirqlParserNULL     = 25
	cirqlParserPIPE     = 26
	cirqlParserDOT      = 27
	cirqlParserCOMMA    = 28
	cirqlParserCOLON    = 29
	cirqlParserDOLLAR   = 30
	cirqlParserLPAREN   = 31
	cirqlParserRPAREN   = 32
	cirqlParserLBRACE   = 33
	cirqlParserRBRACE   = 34
	cirqlParserLBRACK   = 35
	cirqlParserRBRACK   = 36
	cirqlParserOR       = 37
	cirqlParserAND      = 38
	cirqlParserNOT      = 39
	cirqlParserEQ       = 40
	cirqlParserNE       = 41
	cirqlParserGE       = 42
	cirqlParserLE       = 43
	cirqlParserGT       = 44
	cirqlParserLT       = 45
	cirqlParserPLUS     = 46
	cirqlParserMINUS    = 47
	cirqlParserSTAR     = 48
	cirqlParserSLASH    = 49
	cirqlParserPERCENT  = 50
	cirqlParserNAME     = 51
	cirqlParserFLOAT    = 52
	cirqlParserINT      = 53
	cirqlParserSTRING   = 54
	cirqlParserWS       = 55
)

// cirqlParser rules.
const (
	cirqlParserRULE_pipeline       = 0
	cirqlParserRULE_stage          = 1
	cirqlParserRULE_sourceStage    = 2
	cirqlParserRULE_queryStage     = 3
	cirqlParserRULE_queryBody      = 4
	cirqlParserRULE_selectionSet   = 5
	cirqlParserRULE_field          = 6
	cirqlParserRULE_arguments      = 7
	cirqlParserRULE_argument       = 8
	cirqlParserRULE_httpStage      = 9
	cirqlParserRULE_fileStage      = 10
	cirqlParserRULE_stdinStage     = 11
	cirqlParserRULE_transformStage = 12
	cirqlParserRULE_mapStage       = 13
	cirqlParserRULE_flatMapStage   = 14
	cirqlParserRULE_mapping        = 15
	cirqlParserRULE_filterStage    = 16
	cirqlParserRULE_reduceStage    = 17
	cirqlParserRULE_reduceOp       = 18
	cirqlParserRULE_sortStage      = 19
	cirqlParserRULE_limitStage     = 20
	cirqlParserRULE_uniqStage      = 21
	cirqlParserRULE_expr           = 22
	cirqlParserRULE_fieldAccess    = 23
	cirqlParserRULE_pathSeg        = 24
	cirqlParserRULE_funcCall       = 25
	cirqlParserRULE_variable       = 26
	cirqlParserRULE_argValue       = 27
	cirqlParserRULE_objectLit      = 28
	cirqlParserRULE_listLit        = 29
	cirqlParserRULE_literal        = 30
)

// IPipelineContext is an interface to support dynamic dispatch.
type IPipelineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllStage() []IStageContext
	Stage(i int) IStageContext
	EOF() antlr.TerminalNode
	AllPIPE() []antlr.TerminalNode
	PIPE(i int) antlr.TerminalNode

	// IsPipelineContext differentiates from other interfaces.
	IsPipelineContext()
}

type PipelineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPipelineContext() *PipelineContext {
	var p = new(PipelineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_pipeline
	return p
}

func InitEmptyPipelineContext(p *PipelineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_pipeline
}

func (*PipelineContext) IsPipelineContext() {}

func NewPipelineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PipelineContext {
	var p = new(PipelineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = cirqlParserRULE_pipeline

	return p
}

func (s *PipelineContext) GetParser() antlr.Parser { return s.parser }

func (s *PipelineContext) AllStage() []IStageContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStageContext); ok {
			len++
		}
	}

	tst := make([]IStageContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStageContext); ok {
			tst[i] = t.(IStageContext)
			i++
		}
	}

	return tst
}

func (s *PipelineContext) Stage(i int) IStageContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStageContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStageContext)
}

func (s *PipelineContext) EOF() antlr.TerminalNode {
	return s.GetToken(cirqlParserEOF, 0)
}

func (s *PipelineContext) AllPIPE() []antlr.TerminalNode {
	return s.GetTokens(cirqlParserPIPE)
}

func (s *PipelineContext) PIPE(i int) antlr.TerminalNode {
	return s.GetToken(cirqlParserPIPE, i)
}

func (s *PipelineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PipelineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PipelineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(cirqlListener); ok {
		listenerT.EnterPipeline(s)
	}
}

func (s *PipelineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(cirqlListener); ok {
		listenerT.ExitPipeline(s)
	}
}

func (p *cirqlParser) Pipeline() (localctx IPipelineContext) {
	localctx = NewPipelineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, cirqlParserRULE_pipeline)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(62)
		p.Stage()
	}
	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)
	for _la == cirqlParserPIPE {
		{
			p.SetState(63)
			p.Match(cirqlParserPIPE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(64)
			p.Stage()
		}

		p.SetState(69)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(70)
		p.Match(cirqlParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// IStageContext is an interface to support dynamic dispatch.
type IStageContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SourceStage() ISourceStageContext
	TransformStage() ITransformStageContext

	// IsStageContext differentiates from other interfaces.
	IsStageContext()
}

type StageContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStageContext() *StageContext {
	var p = new(StageContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_stage
	return p
}

func InitEmptyStageContext(p *StageContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_stage
}

func (*StageContext) IsStageContext() {}

func NewStageContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StageContext {
	var p = new(StageContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = cirqlParserRULE_stage

	return p
}

func (s *StageContext) GetParser() antlr.Parser { return s.parser }

func (s *StageContext) SourceStage() ISourceStageContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISourceStageContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISourceStageContext)
}

func (s *StageContext) TransformStage() ITransformStageContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITransformStageContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITransformStageContext)
}

func (s *StageContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StageContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StageContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(cirqlListener); ok {
		listenerT.EnterStage(s)
	}
}

func (s *StageContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(cirqlListener); ok {
		listenerT.ExitStage(s)
	}
}

func (p *cirqlParser) Stage() (localctx IStageContext) {
	localctx = NewStageContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, cirqlParserRULE_stage)
	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case cirqlParserQUERY, cirqlParserHTTP, cirqlParserFILE, cirqlParserSTDIN, cirqlParserLBRACE:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(72)
			p.SourceStage()
		}

	case cirqlParserMAP, cirqlParserFLATMAP, cirqlParserFILTER, cirqlParserREDUCE, cirqlParserSORT, cirqlParserLIMIT, cirqlParserUNIQ:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(73)
			p.TransformStage()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// ISourceStageContext is an interface to support dynamic dispatch.
type ISourceStageContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	QueryStage() IQueryStageContext
	HttpStage() IHttpStageContext
	FileStage() IFileStageContext
	StdinStage() IStdinStageContext

	// IsSourceStageContext differentiates from other interfaces.
	IsSourceStageContext()
}

type SourceStageContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceStageContext() *SourceStageContext {
	var p = new(SourceStageContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_sourceStage
	return p
}

func InitEmptySourceStageContext(p *SourceStageContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_sourceStage
}

func (*SourceStageContext) IsSourceStageContext() {}

func NewSourceStageContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceStageContext {
	var p = new(SourceStageContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = cirqlParserRULE_sourceStage

	return p
}

func (s *SourceStageContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceStageContext) QueryStage() IQueryStageContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IQueryStageContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IQueryStageContext)
}

func (s *SourceStageContext) HttpStage() IHttpStageContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHttpStageContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHttpStageContext)
}

func (s *SourceStageContext) FileStage() IFileStageContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFileStageContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFileStageContext)
}

func (s *SourceStageContext) StdinStage() IStdinStageContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStdinStageContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStdinStageContext)
}

func (s *SourceStageContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceStageContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceStageContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(cirqlListener); ok {
		listenerT.EnterSourceStage(s)
	}
}

func (s *SourceStageContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(cirqlListener); ok {
		listenerT.ExitSourceStage(s)
	}
}

func (p *cirqlParser) SourceStage() (localctx ISourceStageContext) {
	localctx = NewSourceStageContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, cirqlParserRULE_sourceStage)
	p.SetState(80)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case cirqlParserQUERY, cirqlParserLBRACE:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(76)
			p.QueryStage()
		}

	case cirqlParserHTTP:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(77)
			p.HttpStage()
		}

	case cirqlParserFILE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(78)
			p.FileStage()
		}

	case cirqlParserSTDIN:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(79)
			p.StdinStage()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// IQueryStageContext is an interface to support dynamic dispatch.
type IQueryStageContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	QUERY() antlr.TerminalNode
	QueryBody() IQueryBodyContext

	// IsQueryStageContext differentiates from other interfaces.
	IsQueryStageContext()
}

type QueryStageContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryStageContext() *QueryStageContext {
	var p = new(QueryStageContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_queryStage
	return p
}

func InitEmptyQueryStageContext(p *QueryStageContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_queryStage
}

func (*QueryStageContext) IsQueryStageContext() {}

func NewQueryStageContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryStageContext {
	var p = new(QueryStageContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = cirqlParserRULE_queryStage

	return p
}

func (s *QueryStageContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryStageContext) QUERY() antlr.TerminalNode {
	return s.GetToken(cirqlParserQUERY, 0)
}

func (s *QueryStageContext) QueryBody() IQueryBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IQueryBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IQueryBodyContext)
}

func (s *QueryStageContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryStageContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryStageContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(cirqlListener); ok {
		listenerT.EnterQueryStage(s)
	}
}

func (s *QueryStageContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(cirqlListener); ok {
		listenerT.ExitQueryStage(s)
	}
}

func (p *cirqlParser) QueryStage() (localctx IQueryStageContext) {
	localctx = NewQueryStageContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, cirqlParserRULE_queryStage)
	p.SetState(85)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case cirqlParserQUERY:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(82)
			p.Match(cirqlParserQUERY)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(83)
			p.QueryBody()
		}

	case cirqlParserLBRACE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(84)
			p.QueryBody()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// IQueryBodyContext is an interface to support dynamic dispatch.
type IQueryBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	LBRACE() antlr.TerminalNode
	SelectionSet() ISelectionSetContext
	RBRACE() antlr.TerminalNode

	// IsQueryBodyContext differentiates from other interfaces.
	IsQueryBodyContext()
}

type QueryBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryBodyContext() *QueryBodyContext {
	var p = new(QueryBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_queryBody
	return p
}

func InitEmptyQueryBodyContext(p *QueryBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_queryBody
}

func (*QueryBodyContext) IsQueryBodyContext() {}

func NewQueryBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryBodyContext {
	var p = new(QueryBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = cirqlParserRULE_queryBody

	return p
}

func (s *QueryBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryBodyContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(cirqlParserLBRACE, 0)
}

func (s *QueryBodyContext) SelectionSet() ISelectionSetContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectionSetContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectionSetContext)
}

func (s *QueryBodyContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(cirqlParserRBRACE, 0)
}

func (s *QueryBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryBodyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(cirqlListener); ok {
		listenerT.EnterQueryBody(s)
	}
}

func (s *QueryBodyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(cirqlListener); ok {
		listenerT.ExitQueryBody(s)
	}
}

func (p *cirqlParser) QueryBody() (localctx IQueryBodyContext) {
	localctx = NewQueryBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, cirqlParserRULE_queryBody)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(87)
		p.Match(cirqlParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(88)
		p.SelectionSet()
	}
	{
		p.SetState(89)
		p.Match(cirqlParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// ISelectionSetContext is an interface to support dynamic dispatch.
type ISelectionSetContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllField() []IFieldContext
	Field(i int) IFieldContext

	// IsSelectionSetContext differentiates from other interfaces.
	IsSelectionSetContext()
}

type SelectionSetContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectionSetContext() *SelectionSetContext {
	var p = new(SelectionSetContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_selectionSet
	return p
}

func InitEmptySelectionSetContext(p *SelectionSetContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = cirqlParserRULE_selectionSet
}

func (*SelectionSetContext) IsSelectionSetContext() {}

func NewSelectionSetContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectionSetContext {
	var p = new(SelectionSetContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = cirqlParserRULE_selectionSet

	return p
}

func (s *SelectionSetContext) GetParser() antlr.Parser { return s.parser }
